# metricq-sink-nsca
# Copyright (C) 2020 ZIH, Technische Universitaet Dresden, Federal Republic of Germany
#
# All rights reserved.
#
# This file is part of metricq.
#
# metricq is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# metricq is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with metricq.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = metricq-sink-nsca
author = TU Dresden
author_email = philipp.joram@tu-dresden.de
license = GPL3
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages =
    metricq_sink_nsca
python_requires = >= 3.8
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    metricq ~= 3.0
    click ~= 7.1
    click-log ~= 0.3

[option.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
uvloop =
    uvloop ~= 0.15.2
lint =
    black
    check-manifest
    flake8 ~= 3.8
    flake8-bugbear
    isort ~= 5.0
    pre-commit
test =
    pytest
    pytest-asyncio
docs =
    sphinx ~= 3.0
    sphinx_rtd_theme ~= 0.4.3
    sphinx_autodoc_typehints ~= 1.10
    sphinxcontrib-spelling ~= 5.4
    releases ~= 1.6
dev =
    %(test)s
    %(lint)s
    %(docs)s
    tox

[options.entry_points]
console_scripts =
    metricq-sink-nsca = metricq_sink_nsca:main

[flake8]
application-import-names = metricq_sink_nsca, tests
max-line-length = 88
extend-exclude =
    .mypy_cache,
    .pytest_cache,
    .venv,
    _build,
    build,
    dist,
    venv
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503

[tox:tox]
envlist = py{38,39}, black, isort, check-manifest, flake8

[gh-actions]
python =
    3.8: py38, flake8
    3.9: py39, flake8, black, isort, check-manifest

[testenv]
deps = .[test]
commands =
    pytest \
        --basetemp={envtmpdir} \
        {posargs}

[testenv:black]
deps = .[lint]
commands = python -m black --check --diff .

[testenv:isort]
deps = .[lint]
commands = python -m isort --ignore-whitespace --check --diff .

[testenv:check-manifest]
deps = .[lint]
commands = python -m check_manifest

[testenv:flake8]
deps = .[lint]
commands = python -m flake8 --show-source --statistics
